2022-11-29 Massimo Manghi <mxmanghi@apache.org>
	* src/: thoroughly removed trailing spaces from C code

2022-06-10 Massimo Manghi <mxmanghi@apache.org>
	* doc/xml/directives.xml: moved misplaced text in table
	* configure.ac: Changed default for HonorHeadRequests to 'yes'
	* src/mod_rivet_ng/mod_rivet_generator.c: rephrased comment documenting
	the exit handler behavior

2022-05-31 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/*.c: Directive HonorHeaderOnlyReqs renamed as
	HonorHeadRequests, which sounds more consistent with the common parlance 
	regarding HTTP

2022-03-01 Massimo Manghi <mxmanghi@apache.org>
	* tests/getall.rvt: add new test for the 2 forms of [::rivet::var_qs all]

2022-02-20 Massimo Manghi <mxmanghi@apache.org>
	* tclconfig/tcl.m4: merging patched tcl.m4 files that solves issue with
	failing 'install' target
	* m4/: add scripts automatically copied and generated by latest TEA tcl.m4

2022-02-19 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivetCore.c: rephrasing comment
	* doc/xml/internals.xml: fix URL to git repository (it still was pointing to SVN)
	* doc/rivet.css: removing trailing spaces

2022-02-14 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivetCore.c: New feature of the '::rivet::var all' commands.
	An extra optional argument is interpreted as a dictionary of default values 
	* tclconfig/tcl.m4,tclconfig/install-sh: install latest version from Tclconfig repository
	* doc/xml/commands.xml: update page manual for ::rivet::var

2022-02-13 Massimo Manghi <mxmanghi@apache.org>
	* VERSION: bumping version number as 3.2.2
	* src/mod_rivet_ng/rivetCore.c: fixed possible memory leak in Rivet_Var. A Tcl_Obj
	was created to return empty strings replacing an already existing Tcl_Obj losing
	track of it. 	
	* tclconfig/tcl.m4,tclconfig/install-sh: install latest version from Tclconfig repository

2022-01-06 Massimo Manghi <mxmanghi@apache.org>
	* configure.ac: changing obsolete macro AC_PROG_LIBTOOL into LT_INIT